--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
                     <a href="https://www.dayspaharmonytree.com.au/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
+              <div class="work">
+                <img src="/work-10.jpg">
+                <div class="layer">
+                    <h3>Construction Company Website</h3>
+                    <p>Elementor WordPress Project</p>
+                    <a href="https://manishasinghdev.github.io/elementor/"><i class="fas fa-external-link-alt"></i></a>
+                </div>
+            </div>
         </div>
         <!-- <a href="#" class="btn">See more</a> -->
     </div>
