--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="row">
              <div class="about-col-1">
-                <img src="/about.jpg">
+                <img src="about.jpg">
             </div> 
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
@@ -106,7 +106,7 @@
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="/work-1.jpg">
+                <img src="work-1.jpg">
                 <div class="layer">
                     <h3>Printing Consumables Website</h3>
                     <p>WordPress website</p>
@@ -114,7 +114,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/work-2.png">
+                <img src="work-2.png">
                 <div class="layer">
                     <h3>Online Shopping Store</h3>
                     <p>Customized WooCommerce store</p>
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="work">
-                <img src="/work-3.jpg">
+                <img src="work-3.jpg">
                 <div class="layer">
                     <h3>Massage & Spa Website</h3>
                     <p>Customized WordPress site</p>
@@ -130,10 +130,10 @@
                 </div>
             </div>
               <div class="work">
-                <img src="/work-10.jpg">
+                <img src="work-10.jpg">
                 <div class="layer">
                     <h3>Construction Company Website</h3>
-                    <p>Elementor WordPress Project</p>
+                    <p>Elementor WordPress project</p>
                     <a href="https://manishasinghdev.github.io/elementor/"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
@@ -145,7 +145,7 @@
        
         <div class="work-list">
             <div class="work">
-                <img src="/work-4.jpg">
+                <img src="work-4.jpg">
                 <div class="layer">
                     <h3>Landing Page</h3>
                     <p>WordPress page for printing equipment exhibition</p>
@@ -184,7 +184,7 @@
                    
                     <a href="linkedin.com/in/manishasingh17"><i class="fab fa-linkedin"></i></a>
                 </div>
-                <a href="/my-cv.pdf" download class="btn btn2">Download CV</a>
+                <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
             <div class="contact-right">
                 <form name="submit-to-google-sheet">
