--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
 </script>
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzZ4qbLDCdaVqJTeCYYaYgc63g9hnpa6eLlObCjpUAXQHERlyG68CTYpVVQdxLMIEJV/exec' // add your own app script link here
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzZ4qbLDCdaVqJTeCYYaYgc63g9hnpa6eLlObCjpUAXQHERlyG68CTYpVVQdxLMIEJV/exec' // script link 
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
   
@@ -256,3 +256,4 @@
 </body>
 
 </html>
+
