--- a/index.html
+++ b/index.html
@@ -74,32 +74,6 @@
         </div>
     </div>
 </div>
-<!-- ---------services---------------- -->
-<!-- <div id="services">
-    <div class="container">
-        <h1 class="sub-title">My Services</h1>
-        <div class="services-list">
-            <div>
-                <i class="fas fa-code"></i>
-                <h2>Web Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
-            </div>
-            <div>
-                <i class="fas fa-crop-alt"></i>
-                <h2>UI/UX Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
-            </div>
-            <div>
-                <i class="fab fa-app-store"></i>
-                <h2>App Design</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nulla nibh, tincidunt sit amet sapien quis.</p>
-                <a href="#">Learn more</a>
-            </div>
-        </div>
-    </div>
-</div> -->
 <!-- ----------portfolio------------ -->
 <div id="portfolio">
     <div class="container">
@@ -187,9 +161,8 @@
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
                 <p><i class="fas fa-paper-plane"></i> Manisha.hope1@gmail.com</p>
-                <p><i class="fas fa-phone-square-alt"></i> 0490 845 852</p>
+              <p><i class="fas fa-phone-square-alt" aria-hidden="true"></i> +1 672 472 2733</p>
                 <div class="social-icons">
-                   
                     <a href="linkedin.com/in/manishasingh17"><i class="fab fa-linkedin"></i></a>
                 </div>
                 <a href="my-cv.pdf" download class="btn btn2">Download CV</a>
@@ -209,9 +182,6 @@
         <p>Copyright © Manisha 2025 | All rights reserved.</p>
     </div>
 </div>
-
-
-
 <script>
 
     var tablinks = document.getElementsByClassName("tab-links");
@@ -243,7 +213,7 @@
 
 </script>
 <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzZ4qbLDCdaVqJTeCYYaYgc63g9hnpa6eLlObCjpUAXQHERlyG68CTYpVVQdxLMIEJV/exec' // script link 
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbzZ4qbLDCdaVqJTeCYYaYgc63g9hnpa6eLlObCjpUAXQHERlyG68CTYpVVQdxLMIEJV/exec' // Google script link 
     const form = document.forms['submit-to-google-sheet']
     const msg = document.getElementById("msg")
   
@@ -264,5 +234,6 @@
 </body>
 
 </html>
+
 
 
