--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="container">   
         <div class="work-list">
             <div class="work">
-                <img src="work-8.jpg">
+                <img src="images/work-8.jpg">
                 <div class="layer">
                     <h3>Diving Training Centre Website</h3>
                     <p>WordPress Website</p>
@@ -127,7 +127,7 @@
             </div>
             
              <div class="work">
-                <img src="work-9.jpg">
+                <img src="images/work-9.jpg">
                 <div class="layer">
                     <h3>Web Design Agency</h3>
                     <p>WordPress Website</p>
@@ -135,7 +135,7 @@
                 </div>
             </div>
            <div class="work">
-                 <img src="calculator.jpg">
+                 <img src="images/calculator.jpg">
                 <div class="layer">
                     <h3>Simple Calculator App</h3>
                     <p>HTML, CSS & JavaScript</p>
@@ -143,7 +143,7 @@
                 </div> 
             </div>
             <div class="work">
-                 <img src="ietch.jpg">
+                 <img src="images/ietch.jpg">
                 <div class="layer">
                     <h3>Etch-a Sketch Game</h3>
                     <p>HTML, CSS & JavaScript</p>
@@ -234,6 +234,7 @@
 </body>
 
 </html>
+
 
 
 
