--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 </div> 
             </div>
             <div class="work">
-                 <img src="images/ietch.jpg">
+                 <img src="images/etch.jpg">
                 <div class="layer">
                     <h3>Etch-a Sketch Game</h3>
                     <p>HTML, CSS & JavaScript</p>
@@ -234,6 +234,7 @@
 </body>
 
 </html>
+
 
 
 
