--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+nal <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -77,7 +77,7 @@
 <!-- ----------portfolio------------ -->
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">My Work</h1>
+        <h1 class="sub-title">My Work & Personal Projects</h1>
         <div class="work-list">
             <div class="work">
                 <img src="work-1.jpg">
@@ -137,7 +137,7 @@
            <div class="work">
                  <img src="images/calculator.jpg">
                 <div class="layer">
-                    <h3>Simple Calculator App</h3>
+                    <h3>Simple Calculator App(Personal Project)</h3>
                     <p>HTML, CSS & JavaScript</p>
                     <a href="https://manishasinghdev.github.io/Calculator/"><i class="fas fa-external-link-alt"></i></a>
                 </div> 
@@ -145,7 +145,7 @@
             <div class="work">
                  <img src="images/etch.jpg">
                 <div class="layer">
-                    <h3>Etch-a Sketch Game</h3>
+                    <h3>Etch-a Sketch Game(Personal Project)</h3>
                     <p>HTML, CSS & JavaScript</p>
                     <a href="https://manishasinghdev.github.io/Etch-a-Sketch_repo/"><i class="fas fa-external-link-alt"></i></a> 
                 </div>
@@ -234,6 +234,7 @@
 </body>
 
 </html>
+
 
 
 
