--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Manisha's Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5JN24W47T"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-M5JN24W47T');
+</script>
     <script src="https://kit.fontawesome.com/444c462144.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="images/fontawesome-free-6.7.2-web\css/font-awesome.min.css"> -->
 </head>
