--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
                 </div>
                 <div class="tab-contents" id="experience">
                     <ul>
-                        <li><span>2018 - 2024</span><br>Kissel & Wolf Pty Ltd.</li>
-                        <li><span>2016 - 2018</span><br>Sites N Stores</li>
+                        <li><span>2018 - 2024</span><br>Kissel & Wolf Pty Ltd. (Australia)</li>
+                        <li><span>2016 - 2018</span><br>Sites N Stores (Australia)</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
                         
                         <li><span>2019</span><br>Digital Marketing Foundation (Online APAC) <br>Imparture Online Training</li>
-                        <li><span>2016</span><br>M.Tech(IT)<br>Swinburne University of Techology</li>
+                        <li><span>2016</span><br>M.Tech(IT)<br>Swinburne University of Techology (Australia)</li>
                      
                     </ul>
                 </div>
@@ -251,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
