--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5JN24W47T"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-M5JN24W47T"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
   gtag('config', 'G-M5JN24W47T');
-</script>
+</script> -->
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W4QF4QXM');</script>
+<!-- End Google Tag Manager -->
     <script src="https://kit.fontawesome.com/444c462144.js" crossorigin="anonymous"></script>
     <!-- <link rel="stylesheet" href="images/fontawesome-free-6.7.2-web\css/font-awesome.min.css"> -->
 </head>
@@ -247,6 +254,10 @@
         .catch(error => console.error('Error!', error.message))
     })
   </script>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W4QF4QXM"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 </body>
 
